--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html data-theme="light" lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -8,6 +8,54 @@
   </head>
   <body>
     <div id="root"></div>
+
+    <!-- Loader -->
+    <div
+      id="spinner"
+      style="
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100vw;
+        height: 100vh;
+        inset: 0;
+        background: #f5f5f5;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        z-index: 9999;
+        transition: opacity 0.5s ease-in-out;
+      "
+    >
+      <img
+        src="./src/assets/logo.png"
+        class="spinner"
+        style="width: 200px; height: 200px; animation: spin 1s linear infinite"
+      />
+    </div>
+
+    <style>
+      @keyframes spin {
+        0% {
+          transform: rotate(0deg);
+        }
+        100% {
+          transform: rotate(360deg);
+        }
+      }
+      #spinner.fade-out {
+        opacity: 0;
+      }
+    </style>
+
     <script type="module" src="/src/main.jsx"></script>
+    <script>
+      window.addEventListener("load", () => {
+        const spinner = document.getElementById("spinner");
+        spinner.classList.add("fade-out");
+        setTimeout(() => spinner.remove());
+      });
+    </script>
   </body>
 </html>
