--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       "
     >
       <img
-        src="./src/assets/logo.png"
+        src="./src/assets/loader.png"
         class="spinner"
         style="width: 200px; height: 200px; animation: spin 1s linear infinite"
       />
